<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id= "@+id/tv_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/calculate_title"
        android:textSize="22sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cb_perimeter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perimeter" />

    <CheckBox
        android:id="@+id/cb_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/area" />

    <TextView
        android:id="@+id/tv_figure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/figure_title"
        android:textSize="22sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rg_figures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selection">

        <RadioButton
            android:id="@+id/circle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/circle" />

        <RadioButton
            android:id="@+id/square"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/square" />

        <RadioButton
            android:id="@+id/triangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/triangle" />

        <RadioButton
            android:id="@+id/trapezoid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trapezoid" />

    </RadioGroup>

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold" />


</LinearLayout>